# server/routes/chat.go
@@ -11,15 +11,19 @@ import (
 func Chat(group *echo.Group) {
 	redisInstance := instances.NewRedis(services.Redis())
 	controller := controllers.NewChats(redisInstance, whatsmiau.Get())
+	contactController := controllers.NewContacts(whatsmiau.Get())
 
 	group.POST("/presence", controller.SendChatPresence)
 	group.POST("/read-messages", controller.ReadMessages)
+	group.POST("/fetchProfilePictureUrl", controller.FetchProfilePicture)
+	group.POST("/findContact", contactController.FindContact)
 	group.DELETE("/deleteMessageForEveryone", controller.DeleteMessageForEveryone)
 }
 
 func ChatEVO(group *echo.Group) {
 	redisInstance := instances.NewRedis(services.Redis())
 	controller := controllers.NewChats(redisInstance, whatsmiau.Get())
+	contactController := controllers.NewContacts(whatsmiau.Get())
 
 	// Evolution API Compatibility (partially REST)
 	group.POST("/markMessageAsRead/:instance", controller.ReadMessages)
@@ -27,5 +31,6 @@ func ChatEVO(group *echo.Group) {
 	group.POST("/whatsappNumbers/:instance", controller.NumberExists)
 	group.POST("/updateMessage/:instance", controller.UpdateMessage)
 	group.POST("/fetchProfilePictureUrl/:instance", controller.FetchProfilePicture)
+	group.POST("/findContact/:instance", contactController.FindContact)
 	group.DELETE("/deleteMessageForEveryone/:instance", controller.DeleteMessageForEveryone)
 }
